# ihniwid

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-docker.yml  test.yml
docs/: conf.py  ihniwid.rst  index.rst  modules.rst
expamples/: Division by zero.ipynb
ihniwid/: __init__.py  __main__.py  answer.py  backend.py  captcha.py  code_suggestion.py  magic.py  question.py  utils.py
ihniwid/locale/ru/LC_MESSAGES/: ihniwid.po
locale/: ihniwid.pot
locale/ru/LC_MESSAGES/: ihniwid.mo  ihniwid.po
src/: backend.py
test/: test_backend.py  test_ihniwid.py
test/mocked_requests/: api-pagesize.json  nocaptcha.html
test/mocked_requests/undefined-is-not-a-function/: 200.html  api-questions-by-ids-page1.json  api-questions-by-ids-page3.json  api-questions-by-ids-page4.json  api-questions-by-ids-page5.json  output.txt
