[tool.poetry]
name = "ihniwid"
version = "0.1.0"
description = "I have no idea what I'm doing. If your code doesn't work, we will try to find answers on stackoverflow for you."
authors = ["Vladimir Kurilin <vkurilin@smartdec.ru>, Sergey Bugaev <bugaevc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
StackAPI = "^0.2.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
