[tool.poetry]
name = "ihniwid"
version = "0.2.0"
description = "I have no idea what I'm doing. If your code doesn't work, we will try to find answers on stackoverflow for you."
authors = ["Vladimir Kurilin <vkurilin@smartdec.ru>, Sergey Bugaev <bugaevc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
StackAPI = "^0.2.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
ipython = "^7.22.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
requests-mock = "^1.8.0"
pydocstyle = "^6.0.0"
pylint = "^2.7.4"
jupyter = "^1.0.0"
jsonpickle = "^2.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
